src/components/seek_time/public/seek_time.scss
@import "compass/css3";

.seek-time[data-seek-time] {
  position: absolute;
  width: auto;
  height: 20px;
  line-height: 20px;
  bottom: 55px;
  background-color: rgba(2, 2, 2, 0.5);
  z-index: 9999;
  @include transition(opacity 0.1s ease);

  &.hidden[data-seek-time] {
    opacity: 0;
  }

  span[data-seek-time] {
    position: relative;
    color: white;
    font-size: 10px;
    padding-left: 7px;
    padding-right: 7px;
  }
}

